# Agemo

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.mosquitto  Dockerfile.mosquitto.amd64  Dockerfile.mosquitto.arm64  Dockerfile.mosquitto.multi  Dockerfile.multi  Dockerfile.samples  Dockerfile.samples.amd64  Dockerfile.samples.arm64  Dockerfile_integrated.amd64  Dockerfile_integrated.arm64  Dockerfile_integrated.multi  NOTICE  README.md  SECURITY.md  agemo.service  container_startup.sh
.agemo-samples/config/: constants.default.yaml  samples_settings.default.yaml
.agemo-samples/config/template/: samples_settings.yaml
.agemo/config/: pub_sub_service_settings.default.yaml
.agemo/config/template/: pub_sub_service_settings.yaml
.agemo/samples-config/: samples_settings.default.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: devskim.yml  editorconfig-audit-ci.yml  generate-plantuml.yml  markdown-ci.yml  notice-generation.yml  rust-ci.yml  security-audit.yml
common/: Cargo.toml
common/config/: default.yaml
common/src/: config_utils.rs  lib.rs
config/: constants.default.yaml  pub_sub_service_settings.default.yaml  pub_sub_service_settings.integrated.yaml
container/cargo/: config.toml
container/scripts/: argument_sanitizer.sh  container_startup.sh
devops/cg/: about.toml
docs/: README.md  config-overrides.md  containers.md
docs/diagrams/: brokerless_pubsub_sequence.puml  delete_topic_sequence.puml  pub_disconnect_sequence.puml  pubsub_chariott_component.puml  pubsub_component.puml  pubsub_component_broker_interface.puml  subscribe_sequence.puml  topic_state.puml  unsubscribe_sequence.puml
proc-macros/: Cargo.toml
proc-macros/src/: config_source.rs  lib.rs
proc-macros/src/config_source/: generate.rs  mod.rs  parse.rs  process.rs
proto-build/: Cargo.toml  build.rs
proto-build/src/: lib.rs
proto/publisher/v1/: publisher.proto
proto/pubsub/v1/: pubsub.proto
pub-sub-service/: Cargo.toml  README.md
pub-sub-service/src/: connectors.rs  load_config.rs  main.rs  pubsub_connector.rs  pubsub_impl.rs  topic_manager.rs
pub-sub-service/src/connectors/: chariott_connector.rs  mosquitto.conf  mosquitto_connector.rs
pub-sub-service/src/connectors/chariott/: chariott_provider.rs  chariott_provider_client.rs  mod.rs
pub-sub-service/template/: constants_settings.yaml  pub_sub_service_settings.yaml
samples/: README.md
samples/chariott-publisher/: Cargo.toml
samples/chariott-publisher/src/: chariott_provider.rs  main.rs  publisher_impl.rs
samples/chariott-subscriber/: Cargo.toml
samples/chariott-subscriber/src/: main.rs
samples/common/: Cargo.toml
samples/common/src/: chariott_helper.rs  config_utils.rs  data_generator.rs  lib.rs  load_config.rs  pub_sub_service_helper.rs  publisher_helper.rs  subscriber_helper.rs  topic_store.rs
samples/connectors/chariott/: Cargo.toml
samples/connectors/chariott/src/: chariott_client.rs  chariott_provider_client.rs  lib.rs
samples/connectors/mqtt-five/: Cargo.toml
samples/connectors/mqtt-five/src/: client_connector.rs  lib.rs  mqtt_five_client_connector.rs
samples/proto-build/: Cargo.toml  build.rs
samples/proto-build/src/: lib.rs
samples/proto/sample_grpc/v1/: sample_publisher.proto
samples/simple-publisher/: Cargo.toml
samples/simple-publisher/src/: main.rs  publisher_impl.rs
samples/simple-subscriber/: Cargo.toml
samples/simple-subscriber/src/: main.rs
samples/template/: publisher_settings.yaml  samples_settings.yaml  subscriber_settings.yaml
tools/: .editorconfig  config.sh  notice_generation.sh
