# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = [
  "pub-sub-service",
  "samples/chariott-publisher",
  "samples/chariott-subscriber",
  "samples/common",
  "samples/simple-publisher",
  "samples/simple-subscriber"
]

[workspace.dependencies]
async-std = "1"
async-trait = "0.1.64"
config = "0.13.3"
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.10"
futures = "0.3"
log = "^0.4"
paho-mqtt = "0.12"
prost = "0.12"
prost-types = "0.12"
serde = "1.0.160"
serde_derive = "1.0.163"
serde_json = "^1.0"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.18.0", features = ["time"] }
tonic = "0.10"
tonic-build = "0.10"
tonic-reflection = "0.10"
url = "2.2"
uuid = "1.3.0"
yaml-rust = "0.4"