# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = [
  "common",
  "proc-macros",
  "pub-sub-service",
  "samples/chariott-publisher",
  "samples/chariott-subscriber",
  "samples/common",
  "samples/simple-publisher",
  "samples/simple-subscriber"
]

[workspace.dependencies]
async-std = "1"
async-trait = "0.1.79"
clap = { version = "4.5.4" }
config = "0.13.3"
ctrlc = { version = "3.4", features = ["termination"] }
env_logger = "0.10"
futures = "0.3"
home = "0.5.9"
include_dir = "0.7.3"
log = "^0.4"
paho-mqtt = "0.12"
proc-macro2 = "1.0.79"
prost = "0.12"
prost-types = "0.12"
quote = "1.0.23"
serde = "1.0.197"
serde_derive = "1.0.163"
serde_json = "^1.0"
strum = "0.25"
strum_macros = "0.25"
syn = { version = "2.0.58", features = ["extra-traits", "full"] }
tokio = { version = "1.37.0", features = ["time"] }
tonic = "0.10"
tonic-build = "0.10"
tonic-reflection = "0.10"
url = "2.2"
uuid = "1.8.0"
yaml-rust = "0.4"