# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "pub-sub-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
common = { path = "../common" }
config = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
log = { workspace = true }
paho-mqtt = { workspace = true }
proc-macros = { path = "../proc-macros"}
proto = { path = "../proto-build" }
serde = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = [ "v4", "fast-rng", "macro-diagnostics"] }
yaml-rust = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
paho-mqtt = { workspace = true, features = ["vendored-ssl"] }
