# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "chariott-publisher"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
proto = { path = "../../proto-build" }
samples-common = { path = "../common" }
sample-chariott-connector = { path = "../connectors/chariott" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = [ "v4", "fast-rng", "macro-diagnostics"] }