# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "simple-subscriber"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
samples-common = { path = "../common" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = [ "v4", "fast-rng", "macro-diagnostics"] }