# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "sample-chariott-connector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = { workspace = true }
proto = { path = "../../../proto-build" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }