# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "sample-mqtt-connector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
paho-mqtt = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
paho-mqtt = { workspace = true, features = ["vendored-ssl"] }
